HTML: Eliminated margin on globe. Resolves: #44. - Wrapped all div class=row elements in a div class=container. - Overriding bootstrap .row margins in WMT.css.

--- a/wmt-application-web/src/main/webapp/css/WMT.css
+++ b/wmt-application-web/src/main/webapp/css/WMT.css
@@ -51,10 +51,16 @@
 } 
 
 .rest-panel-bottom {
+    margin: 0 auto;
     position: absolute;
     bottom: 0;
-    height: 100px; /*25%;*/
-    width: 100%
+    height: 100px; /* was 25%;*/
+    width: 100%;
+}
+
+.row {
+    margin-right: 0;
+    margin-left: 0;
 }
 
 #restSolarData {
